final site files

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>About | Leah Tait</title>
+  <title>Portfolio</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="style.css">
@@ -14,6 +14,8 @@
 <body>
 
 
+
+  
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">Leah Tait</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -28,7 +30,7 @@
         </li>
 
         <li class="nav-item active">
-          <a class="nav-link" href="portfolio.html">Porfolio <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
         </li>
 
         <li class="nav-item active">
@@ -38,41 +40,66 @@
         </form>
     </div>
   </nav>
+
   <section class="main-section">
-  <div class="container">
-    <form>
-      <div class="form-group">
-        <label for="exampleInputEmail1">Name</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-          placeholder="John Smith">
 
-      </div>
-      <div class="form-group">
-        <label for="exampleInputEmail1">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-          placeholder="example@gmail.com">
-          </div>
-
-        <div class="form-group">
-          <label for="exampleFormControlTextarea1">Message</label>
-          <textarea class="form-control" id="exampleFormControlTextarea1" rows="8"></textarea>
-
-
-
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h2 class="h2-header">Porfolio</h2>
+        </div>
       </div>
 
-      </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+      <div class="row">
+        <div class="col">
+          <img class="portfolio-img" src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
 
-  </div>
-</section>
+          <h3 class="portfolio-h3">Word Guess</h3>
+        </div>
+        <div class="col">
+          <img class="portfolio-img" src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+
+          <h3 class="portfolio-h3">RPG Game</h3>
+
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <img class="portfolio-img" src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+
+          <h3 class="portfolio-h3">Trivia Game</h3>
+        </div>
+        <div class="col">
+          <img class="portfolio-img" src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+
+          <h3 class="portfolio-h3">Rutgers Info Widget</h3>
+
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <img class="portfolio-img" src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+
+          <h3 class="portfolio-h3">Rock Paper Scissors</h3>
+
+      <div class="col"></div>
+        </div>
+      </div>
+
+  </section>
+
+
+
 
   <div class="footer">
     <div class="card-footer">
       Copyright &copy; 2019
     </div>
   </div>
+
+
 
 </body>
 
